docs/4.20/networking/multiple_networks/secondary_networks/editing-additional-network.md
To update network settings or change network parameters for a secondary network in OpenShift Container Platform, you can modify the configuration for an existing secondary network. Edit the `NetworkAttachmentDefinition` custom resource to apply your changes.

# Modifying a NetworkAttachmentDefinition custom resource

To update network settings or change network parameters for a secondary network in OpenShift Container Platform, you can modify the `NetworkAttachmentDefinition` custom resource. Edit the Cluster Network Operator CR to apply your changes.

<div>

<div class="title">

Prerequisites

</div>

- You have configured a secondary network for your cluster.

- Install the OpenShift CLI (`oc`).

- Log in as a user with `cluster-admin` privileges.

</div>

<div>

<div class="title">

Procedure

</div>

1.  Edit the Cluster Network Operator (CNO) CR in your default text editor by running the following command:

    ``` terminal
    $ oc edit networks.operator.openshift.io cluster
    ```

2.  In the `additionalNetworks` collection, update the secondary network with your changes.

3.  Save your changes and quit the text editor to commit your changes.

4.  Optional: Confirm that the CNO updated the `NetworkAttachmentDefinition` object by running the following command. Replace `<network_name>` with the name of the secondary network to display. There might be a delay before the CNO updates the `NetworkAttachmentDefinition` object to reflect your changes.

    ``` terminal
    $ oc get network-attachment-definitions <network_name> -o yaml
    ```

    For example, the following console output displays a `NetworkAttachmentDefinition` object that is named `net1`:

    ``` terminal
    $ oc get network-attachment-definitions net1 -o go-template='{{printf "%s\n" .spec.config}}'
    { "cniVersion": "0.3.1", "type": "macvlan",
    "master": "ens5",
    "mode": "bridge",
    "ipam":       {"type":"static","routes":[{"dst":"0.0.0.0/0","gw":"10.128.2.1"}],"addresses":[{"address":"10.128.2.100/23","gateway":"10.128.2.1"}],"dns":{"nameservers":["172.30.0.10"],"domain":"us-west-2.compute.internal","search":["us-west-2.compute.internal"]}} }
    ```

</div>
